paysuccess route working

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="page-header">Buy Josh's Speakers</h1>
+        <h1 class="page-header mr-4">Buy Josh's Speakers</h1>
       </div>
     </div>
   </div>
@@ -33,11 +33,11 @@
       <ul>
         <li>They are black speakers</li>
         <li>They are sleek speakers</li>
-        <li>They are &nbsp; <strong>LOUD</strong> &nbsp; speakers</li>
+        <li>They are &nbsp; <strong>LOUD</strong> &nbsp; Speakers</li>
       </ul>
       <form action="/charge" method="post">
         <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="pk_test_oV2txPCWWLjwWcK6vymCmtmG"
-          data-amount="30000" data-name="speakers" data-description="These are Josh's nice speakers" data-locale="auto">
+          data-amount="30000" data-name="Speakers" data-description="These are Josh's nice speakers" data-locale="auto">
         </script>
       </form>
     </div>
