--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,12 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
 </head>
 
 <body>
+<style>
+  .flex {
+    height: 300px;
+    width: 400px;
+  }
+</style>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">
       <img>Buy My Truck
@@ -24,10 +30,35 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-8">
-      <img class="img-responsive pl-5" src="http://carphotos.cardomain.com/images/0004/51/28/4061582.JPG" width="450" height="300" alt="not Josh's speakers">
+
+<section class="flex">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="http://carphotos.cardomain.com/images/0004/51/28/4061582.JPG" data-slide-to="0" class="active"></li>
+    <li data-target="http://carphotos.cardomain.com/images/0004/75/39/4065793.jpg?v=23022657?v=2" data-slide-to="1"></li>
+    <li data-target="#https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTF-Jq_0exn4ifIY7hoUeWdRz11RyyrBi9yvUQTDcDue1UqdtC" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="http://carphotos.cardomain.com/images/0004/51/28/4061582.JPG" alt="First slide">
     </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://carphotos.cardomain.com/images/0004/75/39/4065793.jpg?v=23022657?v=2" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTF-Jq_0exn4ifIY7hoUeWdRz11RyyrBi9yvUQTDcDue1UqdtC" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</section>
     <div class="col-md-4">
       <h2>Features</h2>
       <ul>
@@ -41,11 +72,13 @@
       </ul>
       <form action="/charge" method="post">
         <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="pk_test_oV2txPCWWLjwWcK6vymCmtmG"
-          data-amount="1586044" data-name="Speakers" data-description="These are Josh's nice speakers" data-locale="auto">
+          data-amount="1586044" data-name="2008 GMC Sierra" data-description="Red 2008 GMC Sierra 1500" data-locale="auto">
         </script>
       </form>
     </div>
-  </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
